--- a/mrc_eo/config/yolov3-tiny_lidar.yaml
+++ b/mrc_eo/config/yolov3-tiny_lidar.yaml
@@ -3,7 +3,7 @@ lidar_yolo_model:
   config_file:
     name: yolov3-tiny.cfg
   weight_file:
-    name: yolov3-tiny.weights
+    name: yolov3-tiny_50000_lidar.weights
   threshold:
     value: 0.3
   detection_classes:
